# google-authenticator-wrappers

./: CMakeLists.txt  README.rst  disable-2fa  enable-2fa-custom
pam.d/: gauth.in  gauthctl  google-auth  google-auth.in
src/: gauth-test.c  gauthctl.c
